--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
-     "vite": "^5.4.1"
+    "vite": "^5.4.1"
   },
   "devDependencies": {
-     "vite": "^5.4.1",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -31,7 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.11",
-   
+    "tailwindcss": "^3.4.11"
   }
 }
